--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,13 +7,13 @@ compatibility_date = "2024-01-01"
 # D1 Database
 [[d1_databases]]
 binding = "DB"
-database_name = "club-chomp-db"
-database_id = "YOUR_D1_DATABASE_ID"
+database_name = "club"
+database_id = "74c30701-abcc-4f1e-aaa0-47a3c6cb7cd1"
 
 # KV Namespace for sessions
 [[kv_namespaces]]
-binding = "SESSIONS"
-id = "YOUR_KV_NAMESPACE_ID"
+binding = "club"
+id = "c340cc8a6fad4f7296711619aad50d28"
 
 # Environment variables (set via wrangler secret)
 # VAPID_PUBLIC_KEY
